@@ -38,7 +38,7 @@ RPTDIR=${FILEDIR}/reports
 OUTPUTDIR=${FILEDIR}/output
 
 #  Complete path name of the input file
-INPUTDIR=${FILEDIR}/input
+INPUTDIR=/mgi/all/wts_projects/8400/8459
 INFILE_NAME=${INPUTDIR}/mirbase_assoc.txt
 
 #  Set the size of the memory buffer used when reading an input file
