@@ -62,7 +62,7 @@ export FILEDIR LOGDIR RPTDIR OUTPUTDIR ARCHIVEDIR
 
 # Full path to dir containing input files
 # e.g. /data/downloads/...
-INPUTDIR=/data/loads/mirbase/mirbaseload/coordload/input
+INPUTDIR=/mgi/all/wts_projects/8400/8459
 
 #  Complete path name of the input file(s)
 INFILE_NAME=${INPUTDIR}/mirbase_coord.txt
